# Jane-Street-MechInterp-Puzzle

./: .gitignore  README.md  REPORT.md  WALKTHROUGH.md  biases.py  brute5.c  cluster.py  decode_target.py  diff_blocks.py  find_preimage.py  logic_rows.py  look.py  look2.py  look3.py  look4.py  main.py  per_block.py  pyproject.toml  regfile.py  rom_survey.py  shapes.py  sparsity.py  tail.py  themed.py  trace.py  twowords.py  verify2.py  verify_logic.py  wordlist.py
