[project]
name = "jane-street-mechinterp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
]
